syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/beholder/pb";

package pb;

// Used for testing 
message TestCustomMessage {
  bool bool_val=1;
  int64 int_val=2;
  float float_val=3;
  string string_val=4;
  bytes bytes_val=5;
}

message KeystoneCustomMessage {
  string msg=1;
  string capabilityID=2;
  string capabilityExecutionID=3;
  string triggerID=4;
  string workflowID=5;
  string workflowExecutionID=6;
  string workflowOwner=7;
  string stepID=8;
  string stepRef=9;
}